--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,80 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 #root {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background: ivory;
+}
+
+.interface {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: ivory;
+  font-family: 'Bebas Neue', sans-serif;
+  pointer-events: none;
+}
+
+.interface .time {
+  position: absolute;
+  top: 10%;
+  width: 100%;
+  font-size: 3rem;
+  color: white;
+  background-color: #00000033;
+  ;
+  text-align: center;
+}
+
+.interface .restart {
+  position: absolute;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  font-size: 5rem;
+  color: #ffffff;
+  background: #00000033;
+  text-align: center;
+  padding-top: 10px;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
+/**
+ * Controls
+ */
+.controls {
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  width: 100%;
+}
+
+.controls .wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.controls .key {
+  width: 40px;
+  height: 40px;
+  margin: 4px;
+  border: 2px solid #ffffff;
+  background: #ffffff44;
+}
+
+.controls .key.large {
+  width: 144px;
+}
+
+.controls .key.active {
+  background: #ffffff99;
 }
