--- a/src/css/loader.css
+++ b/src/css/loader.css
@@ -4,98 +4,41 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: #292929;
 }
 
 .loader {
-  height: 5px;
-  width: 5px;
-  color: #fff;
-  box-shadow: -10px -10px 0 5px,
-  -10px -10px 0 5px,
-  -10px -10px 0 5px,
-  -10px -10px 0 5px;
-  animation: loader-38 6s infinite;
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
 }
 
-@keyframes loader-38 {
+.loader::after,
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: 2px solid #FFF;
+  position: absolute;
+  left: 0;
+  top: 0;
+  animation: animloader 2s linear infinite;
+}
+
+.loader::after {
+  animation-delay: 1s;
+}
+
+@keyframes animloader {
   0% {
-    box-shadow: -10px -10px 0 5px,
-    -10px -10px 0 5px,
-    -10px -10px 0 5px,
-    -10px -10px 0 5px;
-  }
-  8.33% {
-    box-shadow: -10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px -10px 0 5px;
-  }
-  16.66% {
-    box-shadow: -10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px 10px 0 5px,
-    10px 10px 0 5px;
-  }
-  24.99% {
-    box-shadow: -10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px 10px 0 5px,
-    -10px 10px 0 5px;
-  }
-  33.32% {
-    box-shadow: -10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px 10px 0 5px,
-    -10px -10px 0 5px;
-  }
-  41.65% {
-    box-shadow: 10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px 10px 0 5px,
-    10px -10px 0 5px;
-  }
-  49.98% {
-    box-shadow: 10px 10px 0 5px,
-    10px 10px 0 5px,
-    10px 10px 0 5px,
-    10px 10px 0 5px;
-  }
-  58.31% {
-    box-shadow: -10px 10px 0 5px,
-    -10px 10px 0 5px,
-    10px 10px 0 5px,
-    -10px 10px 0 5px;
-  }
-  66.64% {
-    box-shadow: -10px -10px 0 5px,
-    -10px -10px 0 5px,
-    10px 10px 0 5px,
-    -10px 10px 0 5px;
-  }
-  74.97% {
-    box-shadow: -10px -10px 0 5px,
-    10px -10px 0 5px,
-    10px 10px 0 5px,
-    -10px 10px 0 5px;
-  }
-  83.3% {
-    box-shadow: -10px -10px 0 5px,
-    10px 10px 0 5px,
-    10px 10px 0 5px,
-    -10px 10px 0 5px;
-  }
-  91.63% {
-    box-shadow: -10px -10px 0 5px,
-    -10px 10px 0 5px,
-    -10px 10px 0 5px,
-    -10px 10px 0 5px;
+    transform: scale(0);
+    opacity: 1;
   }
   100% {
-    box-shadow: -10px -10px 0 5px,
-    -10px -10px 0 5px,
-    -10px -10px 0 5px,
-    -10px -10px 0 5px;
+    transform: scale(1);
+    opacity: 0;
   }
 }
-
