--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@
   flex-direction: column;
   justify-content: space-between;
   pointer-events: none;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 /*Top part*/
