--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,16 @@
   padding: 5px;
 }
 
+.restart {
+  font-size: 2rem;
+  text-align: center;
+  color: white;
+  background-color: #0000007a;
+  padding: 5px;
+  pointer-events: auto;
+  cursor: pointer;
+}
+
 /*Controls*/
 .controls {
   padding: 0 5px 35px 5px;
