--- a/src/css/form.css
+++ b/src/css/form.css
@@ -29,17 +29,16 @@ form .help {
 }
 
 form .help.triggered {
-  top: -50%;
+  top: -40%;
 }
-
-/*____*/
 
 /*Decorations*/
 form .decorations {
   position: absolute;
-  top: -35%;
+  top: -27%;
   left: -2%;
   z-index: -2;
+  pointer-events: none;
 }
 
 form .decorations > * {
@@ -69,8 +68,6 @@ form .decorations .particles-bottom {
   animation: particlesAnimationDown 5s linear infinite;
 }
 
-/*____*/
-
 /*Label*/
 form label {
   width: 220px;
@@ -79,16 +76,22 @@ form label {
 
 form label span {
   position: absolute;
-  top: 6.5%;
-  right: 4%;
   font-size: 1rem;
   border: 1px solid gold;
   border-radius: 100%;
-  padding: 2px 10px 2px 10px;
+  padding: 1px 8px 1px 8px;
   cursor: pointer;
 }
 
-/*____*/
+form label .instagram-hint {
+  top: 6%;
+  right: 2.5%;
+}
+
+form label .password-hint {
+  top: 43.5%;
+  right: 20%;
+}
 
 /*Input*/
 form input {
@@ -99,8 +102,6 @@ form input {
   text-align: center;
   outline: gold;
 }
-
-/*____*/
 
 /*Button*/
 form button {
@@ -118,16 +119,35 @@ form button:enabled:hover {
   background-color: gold;
 }
 
-/*____*/
+/*Validation Message*/
+form .validation-msg {
+  position: absolute;
+  bottom: -250%;
+  left: 0;
+  width: 300px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.25rem;
+  color: rgb(232, 159, 159);
+  background-color: rgba(0, 0, 0, 0.67);
+  padding: 10px;
+  border-radius: 10px;
+  transition: .3s ease-in-out;
+}
+
+form .validation-msg.triggered {
+  bottom: -40%;
+}
 
 /*Responsive*/
 @media screen and (max-width: 768px) {
   form .decorations {
-    top: -37%;
+    top: -28%;
   }
 }
-
-/*____*/
 
 /*Animations*/
 @keyframes particlesAnimationUp {
@@ -151,5 +171,3 @@ form button:enabled:hover {
     opacity: 1;
   }
 }
-
-/*____*/
