--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import url('./css/form.css');
 @import url('./css/highscores.css');
 @import url('./css/menu.css');
+@import url('./css/changeUsernameForm.css');
 
 * {
   padding: 0;
